--- a/scss/blocks/_about-company.scss
+++ b/scss/blocks/_about-company.scss
@@ -25,14 +25,14 @@
   }
 
   &__title {
-    font-size: 38px;
-    line-height: 36px;
+    font-size: 3.8rem;
+    line-height: 3.6rem;
     color: #4D4D4D;
     margin-bottom: 32px;
   }
 
   &__desc {
-    font-size: 18px;
+    font-size: 1.8rem;
     line-height: 1.32;
     margin-bottom: 50px;
   }
