--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -28,7 +28,7 @@
 
   &__btn {
     padding: 15px 18px;
-    font-size: 20px;
+    font-size: 2rem;
     margin-left: 31px;
   }
 
@@ -50,16 +50,16 @@
 
   &__tel {
     color: #fff;
-    font-size: 24px;
-    line-height: 23px;
+    font-size: 2.4rem;
+    line-height: 2.3rem;
     @include bold;
   }
 
   &__work-text {
     max-width: 217px;
     @include bold;
-    font-size: 11px;
-    line-height: 11px;
+    font-size: 1.1rem;
+    line-height: 1;
     margin: 7px 0 0;
   }
 
@@ -72,7 +72,7 @@
   align-items: center;
 
   &__link {
-    font-size: 23px;
+    font-size: 2.3rem;
     @include bold;
     color: #fff;
     transition: margin-top .2s;
