--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,9 +12,6 @@
 
 // Блоки
 @import 'blocks/header';
-<<<<<<< HEAD
 @import 'blocks/slider';
 @import 'blocks/about-company';
-=======
-@import 'blocks/slider';
->>>>>>> d5e7fe8b4275c6be8008a1c20f10e2316d6082fb
+@import 'blocks/goods';
