--- a/scss/blocks/_goods.scss
+++ b/scss/blocks/_goods.scss
@@ -23,6 +23,7 @@
     flex-direction: column;
     padding: 22px 24px 44px;
     transition: all .2s;
+    min-height: 520px;
 
     &:hover {
       box-shadow: 0px 4px 108px rgba(0, 0, 0, 0.13);
@@ -37,5 +38,8 @@
     color: #4C4C4C;
   }
 
-  &__btn {}
+  &__btn {
+    padding: 20px 61px;
+    font-size: 2.1rem;
+  }
 }
