--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,3 +16,6 @@
 @import 'blocks/about-company';
 @import 'blocks/goods';
 @import 'blocks/bonus';
+@import 'blocks/request';
+@import 'blocks/features';
+@import 'blocks/footer';
