--- a/scss/_interface.scss
+++ b/scss/_interface.scss
@@ -1,5 +1,9 @@
 html {
   font-size: 10px;
+
+  @media (max-width: 1400px) {
+    font-size: 8px;
+  }
 }
 
 body {
@@ -25,20 +29,22 @@ p {
 }
 
 button {
+  display: inline-block;
   cursor: pointer;
   border: none;
   outline: none;
   padding: 0;
-  @include bold;
 }
 
 .btn-o {
   color: #FF790C;
   border: 3px solid #FF790C;
+  @include bold;
 }
 
 .btn {
   font-size: 2.9rem;
   color: #fff;
   background-color: #FF7200;
+  @include bold;
 }
