--- a/scss/blocks/_about-company.scss
+++ b/scss/blocks/_about-company.scss
@@ -34,6 +34,10 @@
     font-size: 1.8rem;
     line-height: 1.32;
     margin-bottom: 50px;
+
+    @media (max-width: 1400px) {
+      font-size: 2.3rem;
+    }
   }
 
   &__btn {
