--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -9,6 +9,10 @@
   &__top-wrapper {
     padding: 13px 0 15px;
     background: rgba(255, 255, 255, 0.07);
+
+    @media (max-width: 1400px) {
+      padding: 10px 0 10px;
+    }
   }
 
   &__top {
@@ -34,6 +38,10 @@
 
   &__menu {
     margin-top: 25px;
+
+    @media (max-width: 1400px) {
+      margin-top: 15px;
+    }
   }
 }
 
