--- a/scss/blocks/_about-company.scss
+++ b/scss/blocks/_about-company.scss
@@ -1,21 +1,27 @@
 .about-company {
-  position: relative;
+
 
   &__content {
     display: flex;
     justify-content: space-between;
-    position: absolute;
+    transform: translateY(-65px);
     padding: 50px 50px 44px 54px;
     background: #FFFFFF;
     box-shadow: 0px -129px 108px rgba(0, 0, 0, 0.13);
     border-bottom: 50px solid #FF7200;
-    width: 100%;
-    top: -65px;
+
     max-width: 1180px;
   }
 
+  &__img-wrap {
+    display: flex;
+    align-items: center;
+  }
+
   &__img {
-    object-fit: contain;
+    display: inline-block;
+
+    width: 90%;
   }
 
   &__text {
