--- a/scss/blocks/_features.scss
+++ b/scss/blocks/_features.scss
@@ -19,9 +19,19 @@
 
 .features-list {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
 
-  &__item {}
+  @media (max-width: 1110px) {
+    justify-content: space-between;
+  }
+
+  &__item {
+    flex-basis: 33%;
+
+    @media (max-width: 1110px) {
+      flex-basis: 25%;
+    }
+  }
 
   &__img-wrapper {
     display: flex;
@@ -38,7 +48,7 @@
     font-size: 2.6rem;
     line-height: 1;
     max-width: 260px;
-    margin-top: 20px;
+    margin: 20px auto 0;
     @include bold;
 
 
