--- a/scss/blocks/_goods.scss
+++ b/scss/blocks/_goods.scss
@@ -1,8 +1,8 @@
 .goods {
-  margin-top: 654px;
+  margin-top: 141px;
 
   @media (max-width: 1400px) {
-    margin-top: 580px;
+    margin-top: 50px;
   }
 
   &__content {}
@@ -18,8 +18,12 @@
 
 .goods-cards {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+
+  @media (max-width: 1110px) {
+    justify-content: space-between;
+  }
 
   &__item {
     display: flex;
@@ -28,16 +32,24 @@
     padding: 22px 24px 44px;
     transition: all .2s;
     min-height: 520px;
+    flex-basis: 33%;
 
+    @media (max-width: 1192px) {
+      min-height: 450px;
+    }
 
-
+    @media (max-width: 1110px) {
+      flex-basis: 30%;
+    }
 
     &:hover {
       box-shadow: 0px 4px 108px rgba(0, 0, 0, 0.13);
     }
   }
 
-  &__img {}
+  &__img {
+    width: 100%;
+  }
 
   &__title {
     font-size: 2.6rem;
@@ -49,5 +61,9 @@
     text-align: center;
     padding: 20px 61px;
     font-size: 2.1rem;
+
+    @media (max-width: 1192px) {
+      padding: 10px 30px;
+    }
   }
 }
