--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -69,6 +69,11 @@
     font-size: 1.1rem;
     line-height: 1;
     margin: 7px 0 0;
+
+    @media (max-width: 1400px) {
+      font-size: 1.2rem;
+      line-height: 1.2;
+    }
   }
 
 
