--- a/scss/blocks/_bonus.scss
+++ b/scss/blocks/_bonus.scss
@@ -1,7 +1,9 @@
 .bonus {
   padding-top: 135px;
 
-
+  @media (max-width: 793px) {
+    padding-top: 100px;
+  }
 
   &__content {
     position: relative;
