--- a/scss/blocks/_features.scss
+++ b/scss/blocks/_features.scss
@@ -8,6 +8,10 @@
     padding-top: 200px;
   }
 
+  @media (max-width: 793px) {
+    padding-top: 250px;
+  }
+
   &__content {}
 
   &__title {
@@ -25,12 +29,24 @@
     justify-content: space-between;
   }
 
+  @media (max-width: 793px) {
+    flex-direction: column;
+    justify-content: center;
+  }
+
   &__item {
     flex-basis: 33%;
 
     @media (max-width: 1110px) {
       flex-basis: 25%;
     }
+
+    @media (max-width: 793px) {
+      &:not(:last-child) {
+        margin-bottom: 40px;
+      }
+    }
+
   }
 
   &__img-wrapper {
@@ -38,11 +54,20 @@
     align-items: center;
     justify-content: center;
     min-height: 248px;
+    max-width: 100%;
 
-
+    @media (max-width: 793px) {
+      min-height: 200px;
+    }
   }
 
-  &__img {}
+  &__img {
+    max-width: 100%;
+
+    @media (max-width: 793px) {
+      width: 250px;
+    }
+  }
 
   &__title {
     font-size: 2.6rem;
@@ -50,7 +75,5 @@
     max-width: 260px;
     margin: 20px auto 0;
     @include bold;
-
-
   }
 }
