--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,6 +10,9 @@
 // Настройки интерфейса
 @import 'interface';
 
+// Скроллбар
+@import 'scrollbar';
+
 // Блоки
 @import 'blocks/header';
 @import 'blocks/slider';
