--- a/scss/_interface.scss
+++ b/scss/_interface.scss
@@ -47,4 +47,12 @@ button {
   color: #fff;
   background-color: #FF7200;
   @include bold;
+
+  @media (max-width: 623px) {
+    font-size: 2.5rem;
+  }
+}
+
+.lock {
+  overflow: hidden;
 }
