--- a/scss/blocks/_goods.scss
+++ b/scss/blocks/_goods.scss
@@ -25,6 +25,11 @@
     justify-content: space-between;
   }
 
+  @media (max-width: 793px) {
+    flex-direction: column;
+    justify-content: center;
+  }
+
   &__item {
     display: flex;
     justify-content: space-between;
@@ -39,8 +44,14 @@
     }
 
     @media (max-width: 1110px) {
-      flex-basis: 30%;
+      flex-basis: 33%;
     }
+
+    @media (max-width: 1003px) {
+      min-height: 400px;
+    }
+
+
 
     &:hover {
       box-shadow: 0px 4px 108px rgba(0, 0, 0, 0.13);
@@ -55,6 +66,15 @@
     font-size: 2.6rem;
     line-height: 1;
     color: #4C4C4C;
+
+    @media (max-width: 1003px) {
+      font-size: 2.3rem;
+    }
+
+    @media (max-width: 793px) {
+      margin: 20px 0;
+      font-size: 2.6rem;
+    }
   }
 
   &__btn {
@@ -64,6 +84,15 @@
 
     @media (max-width: 1192px) {
       padding: 10px 30px;
+    }
+
+    @media (max-width: 1003px) {
+      font-size: 1.9rem;
+      padding: 20px 20px;
+    }
+
+    @media (max-width: 793px) {
+      font-size: 2.1rem;
     }
   }
 }
