--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -34,6 +34,10 @@
     padding: 15px 18px;
     font-size: 2rem;
     margin-left: 31px;
+
+    @media (max-width: 768px) {
+      display: none;
+    }
   }
 
   &__menu {
@@ -49,6 +53,9 @@
   display: flex;
   align-items: center;
 
+  @media (max-width: 768px) {
+    display: none;
+  }
 
   &__img {}
 
@@ -84,6 +91,29 @@
   justify-content: space-between;
   align-items: center;
 
+  @media (max-width: 768px) {
+    display: none;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    margin-top: 0;
+    padding-top: 30px;
+    padding-left: 30px;
+    background-color: #FF7200;
+    overflow: scroll;
+  }
+
+  &_active {
+    @media (max-width: 768px) {
+      display: flex;
+    }
+  }
+
   &__link {
     font-size: 2.3rem;
     @include bold;
@@ -92,6 +122,85 @@
 
     &:hover {
       margin-top: -2px;
+    }
+
+    @media (max-width: 1003px) {
+      font-size: 2.1rem;
+    }
+
+    @media (max-width: 768px) {
+      display: inline-block;
+      background-color: #FF7200;
+      font-size: 5rem;
+      padding: 15px 0 15px;
+      max-width: 50%;
+      font-size: 2.2rem;
+
+      &:hover {
+        margin-top: 0;
+      }
+    }
+
+
+  }
+}
+
+.menu-burger {
+  display: none;
+
+  @media (max-width: 768px) {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+    z-index: 10;
+    margin-right: 20px;
+
+    &__line {
+      background-color: #fff;
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      top: 9px;
+      transition: all .5s;
+    }
+
+    &::before,
+    &::after {
+      content: '';
+      background-color: #fff;
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      left: 0;
+      transition: all .5s;
+    }
+
+    &::before {
+      top: 0;
+    }
+
+    &::after {
+      bottom: 0;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .menu-burger_active {
+
+    span {
+      transform: scale(0);
+    }
+
+    &::before {
+      top: 9px;
+      transform: rotate(-45deg);
+    }
+
+    &::after {
+      bottom: 9px;
+      transform: rotate(45deg);
     }
   }
 }
