--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -11,7 +11,11 @@
     background: rgba(255, 255, 255, 0.07);
 
     @media (max-width: 1400px) {
-      padding: 10px 0 10px;
+      padding: 10px 0;
+    }
+
+    @media (max-width: 768px) {
+      padding: 5px 0;
     }
   }
 
@@ -23,6 +27,10 @@
 
   &__logo {
     margin-left: -4px;
+
+    @media (max-width: 768px) {
+      max-width: 100px;
+    }
   }
 
   &__contacts {
@@ -92,7 +100,6 @@
   align-items: center;
 
   @media (max-width: 768px) {
-    display: none;
     flex-direction: column;
     justify-content: start;
     align-items: start;
@@ -106,11 +113,15 @@
     padding-left: 30px;
     background-color: #FF7200;
     overflow: scroll;
+    opacity: 0;
+    max-height: 0;
+    transition: all .2s;
   }
 
   &_active {
     @media (max-width: 768px) {
-      display: flex;
+      max-height: none;
+      opacity: 1;
     }
   }
 
@@ -134,7 +145,7 @@
       font-size: 5rem;
       padding: 15px 0 15px;
       max-width: 50%;
-      font-size: 2.2rem;
+      font-size: 2.5rem;
 
       &:hover {
         margin-top: 0;
@@ -154,7 +165,6 @@
     width: 30px;
     height: 20px;
     z-index: 10;
-    margin-right: 20px;
 
     &__line {
       background-color: #fff;
