--- a/scss/blocks/_request.scss
+++ b/scss/blocks/_request.scss
@@ -12,28 +12,43 @@
     box-shadow: 0px 0px 108px rgba(0, 0, 0, 0.13);
     background-color: #fff;
     transform: translateY(250px);
+
+    @media (max-width: 453px) {
+      padding: 45px 10px;
+    }
   }
 
   &__title {
     font-size: 6.1rem;
-    line-height: 5.8rem;
+    line-height: 1.1;
     color: #4C4C4C;
     margin-bottom: 50px;
 
     @media (max-width: 1400px) {
       font-size: 5rem;
-      line-height: 1;
+    }
+
+    @media (max-width: 762px) {
+      margin-bottom: 30px;
+    }
+
+    @media (max-width: 410px) {
+      font-size: 4rem;
     }
   }
 
   &__text {
     font-size: 3.3rem;
-    line-height: 1;
+    line-height: 1.2;
     color: #969696;
     margin-bottom: 80px;
 
     @media (max-width: 1400px) {
       font-size: 2.5rem;
+    }
+
+    @media (max-width: 762px) {
+      margin-bottom: 40px;
     }
 
     &_orange {
@@ -43,5 +58,9 @@
 
   &__btn {
     padding: 21px 53px;
+
+    @media (max-width: 422px) {
+      padding: 10px 25px;
+    }
   }
 }
