--- a/scss/blocks/_slider.scss
+++ b/scss/blocks/_slider.scss
@@ -33,6 +33,10 @@
     @media (max-width: 793px) {
       font-size: 6rem;
     }
+
+    @media (max-width: 381px) {
+      font-size: 4rem;
+    }
   }
 
   &__subtitle {
@@ -42,6 +46,10 @@
     @media (max-width: 1400px) {
       font-size: 3rem;
       line-height: 1;
+    }
+
+    @media (max-width: 381px) {
+      font-size: 2.5rem;
     }
   }
 
@@ -81,6 +89,11 @@
 
     @media (max-width: 726px) {
       text-align: center;
+      line-height: 1.3;
+    }
+
+    @media (max-width: 381px) {
+      font-size: 3rem;
     }
   }
 
@@ -100,8 +113,16 @@
       line-height: 1;
     }
 
-    @media (max-width: 623px) {
+    @media (max-width: 635px) {
       font-size: 8rem;
+    }
+
+    @media (max-width: 515px) {
+      font-size: 5rem;
+    }
+
+    @media (max-width: 381px) {
+      font-size: 4rem;
     }
   }
 
